Date: Tue, 23 May 2017 11:26:59 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.6.0 2016-XX-XX Marc-Etienne Vargenau ==

Major release:
* PHP 7 compatible
* Full HTML 5: Add HTML 5 <main> <header> <footer> <nav> in all themes. Add ARIA roles.

Changes:
* Update jQuery to 2.2.4: Internet Explorer <= 8 no longer supported
* Pear: use ##mysqli## instead of ##mysql##
* Update Pear DB library to 1.9.2
* Replace ##ereg## functions
* Update Adodb to version 5.20.7
* Update ASCIIMathPHP to version 2.1 (from Zefling/ASCIIMathPHP on github.com)
* Update highlight.js to version 9.7.0
* Allow Wikicreole syntax for plugins in theme templates
* Valid HTML5 and CSS3 logos (in debug mode)
* Better is_localhost() function (allow IPv6, allow Windows IIS). Patch by Thierry Nabeth.
* Remove Fusionforge-specific files (g view.php wikiadmin.php wikilist.php)
* Bugs:
** Make XHTML ZIP Snapshot work again (broken since ~PhpWiki 1.5.3)
** It was possible to rename a page to a name with illegal characters, like ~[~]
** Remove wrong calls to setTightness in ##lib/~InlineParser.php## (bug reported by Harold Hallikainen)
** Importing a ZIP from an old wiki in Latin 1 (ISO 8859-1) failed. Reported by Frank Michael.
** Better check arguments for ~GoogleMaps plugin
* Plugins:
** ~UpLoad plugin: put date and author in history
** ~UpLoad plugin: don't inline images
** phpweather-2.2.2 included in ~PhpWiki; ~PhpWeather plugin allowed in Fusionforge
** ~HtmlConverter plugin: check file is encoded in UTF-8; ~HtmlConverter plugin allowed in Fusionforge
** Use jquery.autoheight.js plugin for Transclude plugin
** Repair [[Help:PhotoAlbumPlugin|PhotoAlbumPlugin]]
** Rename action page ~DebugInfo as ~DebugBackendInfo (to be consistent with plugin name)